--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'AE'
 - !lcsh 'Encyclopedias and dictionaries'
+- GITenberg
 title: "Encyclopaedia Britannica, 11th Edition, \"David, St\" to \"Demidov\"\r\nVolume\
   \ 7, Slice 10"
 url: http://www.gutenberg.org/ebooks/38892
